# scrapy-command-new

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
scrapy_new/: __init__.py  new.py
scrapy_new/templates/: command.py.mako  extension.py.mako  item.py.mako  middleware.py.mako  model.py.mako  pipeline.py.mako  spider.py.mako  spider_middleware.py.mako
