[tool.poetry]
name = "scrapy-command-new"
version = "0.0.8"
description = "A package providing code generation command for scrapy CLI"
authors = ["Kristobal Junta <junta.kristobal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
inflection = "^0.3.1"
mako = "^1.1.1"
scrapy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.11.1"
pylint = "^2.4.4"
pre-commit = "^1.21.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.scrapy
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
