[tool.poetry]
name = "scrapy_new"
version = "0.2.0"
description = "A package providing code generation command for scrapy CLI"
authors = [
    "Kristobal Junta <junta.kristobal@gmail.com>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/groupbwt/scrapy-command-new"
homepage = "https://github.com/groupbwt/scrapy-command-new"

keywords = ["scrapy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
inflection = "^0.3.1"
mako = "^1.1.1"
scrapy = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.11.1"
pylint = "^2.4.4"
pre-commit = "^1.21.0"

[tool.poetry.plugins."scrapy.commands"]
new = "scrapy_new.new:NewCommand"

[tool.black]
line-length = 88
target-version = ['py36', 'py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.scrapy
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
